# OpenLogi

./: CHANGELOG.md  Cargo.toml  README.md  README_CN.md  devenv.nix  release-plz.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  device_support.yml  feature_request.yml
.github/workflows/: release-plz.yml  release.yml  windows-sign-dryrun.yml
crates/openlogi-agent/: Cargo.toml
crates/openlogi-agent-core/: Cargo.toml
crates/openlogi-agent-core/src/: bindings.rs  device_order.rs  hook_runtime.rs  ipc.rs  lib.rs  orchestrator.rs
crates/openlogi-agent-core/src/watchers/: accessibility.rs  foreground_app.rs  gesture.rs  inventory.rs  mod.rs  pairing.rs
crates/openlogi-agent/macos/: Info.plist
crates/openlogi-agent/src/: launch_agent.rs  main.rs  server.rs  takeover.rs  tray.rs
crates/openlogi-assets/src/: http.rs  index.rs  lib.rs  manifest.rs  metadata.rs
crates/openlogi-cli/: Cargo.toml
crates/openlogi-cli/src/cmd/: list.rs  mod.rs
crates/openlogi-cli/src/cmd/assets/: sync.rs
crates/openlogi-cli/src/cmd/diag/: dpi.rs  features.rs  lighting.rs  mod.rs  smartshift.rs
crates/openlogi-core/: Cargo.toml
crates/openlogi-core/src/: binding.rs  config.rs  device.rs  diagnostics.rs  lib.rs  single_instance.rs
crates/openlogi-gui/: Cargo.toml
crates/openlogi-gui/dev/: Info.plist
crates/openlogi-gui/locales/: app.yml  da.yml  de.yml  el.yml  en.yml  es.yml  fi.yml  fr.yml  it.yml  ja.yml  ko.yml  nb.yml  nl.yml  pl.yml  pt-BR.yml  pt-PT.yml  ru.yml  sv.yml  zh-CN.yml  zh-HK.yml  zh-TW.yml
crates/openlogi-gui/src/: app.rs  app_menu.rs  diagnostics.rs  gesture_watcher.rs  hardware.rs  hook_runtime.rs  i18n.rs  ipc_client.rs  main.rs  state.rs  theme.rs
crates/openlogi-gui/src/asset/: mod.rs  sync.rs
crates/openlogi-gui/src/components/: dpi_panel.rs  gesture_pad.rs  mod.rs  smartshift_panel.rs
crates/openlogi-gui/src/data/: mouse_buttons.rs
crates/openlogi-gui/src/mouse_model/: geometry.rs  leader_lines.rs  picker.rs  view.rs
crates/openlogi-gui/src/platform/: menubar.rs  mod.rs  notification.rs  os.rs  tray.rs
crates/openlogi-gui/src/state/: devices.rs  dpi.rs
crates/openlogi-gui/src/watchers/: gesture.rs
crates/openlogi-gui/src/windows/: about.rs  add_device.rs  mod.rs  settings.rs  update_consent.rs
crates/openlogi-hid/: Cargo.toml
crates/openlogi-hid/src/: gesture.rs  inventory.rs  lib.rs  mappings.rs  node_ledger.rs  pairing.rs  reprog_controls.rs  route.rs  smartshift.rs  transport.rs  write.rs
crates/openlogi-hidpp/: LICENSE
crates/openlogi-hidpp/src/: bcd.rs  channel.rs  device.rs  event.rs  lib.rs  nibble.rs
crates/openlogi-hidpp/src/feature/: mod.rs  registry.rs  root.rs
crates/openlogi-hidpp/src/feature/adjustable_dpi/: mod.rs
crates/openlogi-hidpp/src/feature/device_friendly_name/: mod.rs
crates/openlogi-hidpp/src/feature/device_information/: mod.rs
crates/openlogi-hidpp/src/feature/device_type_and_name/: mod.rs
crates/openlogi-hidpp/src/feature/feature_set/: mod.rs
crates/openlogi-hidpp/src/feature/hires_wheel/: mod.rs
crates/openlogi-hidpp/src/feature/smartshift/: mod.rs
crates/openlogi-hidpp/src/feature/thumbwheel/: mod.rs
crates/openlogi-hidpp/src/feature/unified_battery/: mod.rs
crates/openlogi-hidpp/src/feature/wireless_device_status/: mod.rs
crates/openlogi-hidpp/src/protocol/: mod.rs  v10.rs  v20.rs
crates/openlogi-hidpp/src/receiver/: bolt.rs  mod.rs  unifying.rs
crates/openlogi-hook/: Cargo.toml
crates/openlogi-hook/examples/: print_events.rs
crates/openlogi-hook/src/: lib.rs  linux.rs  windows.rs
docs/: CONFIGURATION.md  DEVELOPMENT.md  README.de.md  README.fr.md  README.ja.md  README.ko.md  README.zh-CN.md  USAGE.md
nix/: package.nix
packaging/linux/: install.sh  uninstall.sh
packaging/linux/nfpm-scripts/: postinstall.sh  postremove.sh
packaging/windows/: OpenLogi.wxs
scripts/: cargo-run-macos.sh  package-macos.sh
scripts/release-notes/: generate.ts  package.json  pnpm-lock.yaml
xtask/src/: macos.rs
