[package]
name = "openlogi-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLogi background agent — headless, always-on owner of the input hook, HID++ device I/O, and (later) the menu-bar tray."
# Distributed as a login-item helper inside the bundled .app; never published.
publish = false

[[bin]]
name = "openlogi-agent"
path = "src/main.rs"

[dependencies]
openlogi-agent-core = { path = "../openlogi-agent-core" }
openlogi-core = { path = "../openlogi-core" }
openlogi-hid = { path = "../openlogi-hid" }
openlogi-hook = { path = "../openlogi-hook" }
tarpc = { version = "0.37", features = ["serde1", "serde-transport", "serde-transport-bincode", "tokio1"] }
interprocess = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util"] }
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Menu-bar status item (NSStatusItem) — the agent hosts the tray now. objc2
# gives Retained<T>-owned AppKit bindings (no #99-style leaks); versions match
# the GUI's so the resolve doesn't move the gpui Cargo.lock pin.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSButton", "NSControl", "NSResponder", "NSView", "NSMenu", "NSMenuItem", "NSImage", "NSApplication", "NSRunningApplication"] }
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSData", "NSArray"] }

# Autostart via the HKCU Run key (launch_agent.rs).
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[lints]
workspace = true
