[package]
name = "openlogi-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types, config, and paths for OpenLogi. No I/O specifics."
keywords = ["logitech", "hidpp", "config", "mouse", "hid"]
categories = ["hardware-support", "config"]

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"
zbus = "5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25.0", features = ["highsierra"] }
core-foundation = { workspace = true }
