[package]
name = "openlogi-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GPUI-based desktop UI for OpenLogi."
# Not publishable to crates.io: depends on git-only gpui / gpui_platform
# (gpui_platform is not on the registry). Distributed as a bundled .app.
publish = false

[[bin]]
name = "openlogi-gui"
path = "src/main.rs"

[dependencies]
openlogi-core = { path = "../openlogi-core" }
openlogi-hid = { path = "../openlogi-hid" }
openlogi-hook = { path = "../openlogi-hook" }
openlogi-assets = { path = "../openlogi-assets" }
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fs4 = { version = "1.1.0", features = ["sync"] }
thiserror.workspace = true
ureq.workspace = true
rust-i18n = "4"
sys-locale = "0.3.2"
gpui-updater = { git = "https://github.com/AprilNEA/gpui-updater", tag = "v0.0.2", features = ["gpui"] }

# Menu-bar (NSStatusItem) FFI — GPUI has no status-bar API. Same crates the
# openlogi-hook CGEventTap uses, so the toolchain is already proven here.
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

# Mirrors [workspace.lints], plus an allow for the legacy `cfg(cargo-clippy)`
# check emitted by objc 0.2's macros (same as openlogi-hook). unsafe_code stays
# denied; the menubar module opts in locally with #[expect(unsafe_code)].
[lints.rust]
unsafe_code = "deny"
unexpected_cfgs = { level = "allow", check-cfg = [] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
missing_errors_doc = "allow"
doc_markdown = "allow"

[package.metadata.bundle]
name = "OpenLogi"
identifier = "org.openlogi.openlogi"
version = "0.1.0"
category = "public.app-category.utilities"
short_description = "Lightweight local-first companion for Logitech HID++ peripherals."
long_description = """\
OpenLogi talks to Logitech HID++ mice and keyboards directly — no \
cloud account, no telemetry, no auto-update poller. Plain TOML config, \
single binary; device renders are fetched on demand on first launch.
"""
osx_minimum_system_version = "13.0"
icon = ["icon/AppIcon.icns"]
resources = ["assets/**/*"]
