[package]
name = "openlogi-hid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HID++ device discovery for OpenLogi, wrapping the hidpp crate over async-hid."
keywords = ["logitech", "hidpp", "hid", "mouse", "async"]
categories = ["hardware-support", "asynchronous"]

[dependencies]
openlogi-core = { path = "../openlogi-core", version = "0.3.1" }
hidpp = { workspace = true }
async-hid = { workspace = true }
tokio = { workspace = true }
futures-lite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
