[package]
name = "openlogi-hook"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OS-level mouse-event hook for OpenLogi. macOS via CGEventTap; Linux/Windows are stubs."

[dependencies]
openlogi-core = { path = "../openlogi-core", version = "0.3.1" }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { workspace = true }
core-foundation = { workspace = true }
cocoa = "0.26"
objc = "0.2"

[lints.rust]
unsafe_code = "allow"
unexpected_cfgs = { level = "allow", check-cfg = [] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
missing_errors_doc = "allow"
doc_markdown = "allow"
